--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,59 @@
+/*Horizontal Rule Styling*/
+hr {
+  border-top: 1px solid #fff;
+  width: 95%;
+  float: left;
+  margin-left: 0; }
+
+/*APPLIED TO: Main Header and Footer*/
 .bg-plum {
   background-color: #2e006b;
   color: #fff; }
 
+/*APPLIED TO: Main Header Tab*/
 .bg-orange {
   background-color: #ff8758; }
 
+/*APPLIED TO: Main Header Tab and on Contact Page*/
 .bg-pink {
-  background-color: #FC4C65; }
+  background-color: #fc4c65; }
 
+/*Contact: Button Background Colors */
 .btn-pink {
   color: #fff;
-  background-color: #FC4C65; }
+  background-color: #fc4c65; }
 
 .btn-pink:hover {
-  color: #FC4C65;
-  border: 1px solid #FC4C65;
+  color: #fc4c65;
+  border: 1px solid #fc4c65;
   background-color: #fff; }
 
-#main-header img {
-  width: 100%;
-  height: 100%; }
+/*Main Header: My Image*/
+#main-header {
+  /*Main Header Tabs: Icons, House, Hat, File Folder, and Envelope*/ }
+  #main-header img {
+    width: 100%;
+    height: 100%; }
+  #main-header .port-item {
+    width: 30%; }
+    #main-header .port-item .fa {
+      font-size: 2em; }
+  #main-header .port-item:hover {
+    opacity: 0.8;
+    cursor: pointer; }
 
-#main-header .port-item {
-  width: 30%; }
-  #main-header .port-item .fa {
-    font-size: 2em; }
-
-#main-header .port-item:hover {
-  opacity: 0.8;
-  cursor: pointer; }
-
+/*Main Header Links: Social Media Links inside Header*/
 #socialLinks > div > a {
   color: #fff; }
 
 #socialLinks > div > a:hover {
-  color: #FC4C65; }
+  color: #fc4c65; }
 
+/*Main Header: 'Web Developer' Title Size*/
 #title {
   font-size: 20px; }
 
+/*Works/Portfolio: Styling for links on Portfolio section*/
 .lead > a {
   padding: 0px 4px;
   color: #fa1d3f; }
@@ -47,23 +62,32 @@
   color: #2e006b;
   text-decoration: none; }
 
-.card-title > a {
-  color: #212529; }
+/* I got this css by going to http://ashleydw.github.io/lightbox/, 
+   then scrolling down to image gallery example 
+   right-clicking, and inspecting element - particulary the modal's css */
+.ekko-lightbox-nav-overlay {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -ms-flexbox;
+  display: flex; }
 
-.card-title > a:hover {
-  color: #FC4C65;
-  text-decoration: none; }
-
+/*Contact: This is to keep "message sent" alert HIDDEN until user has actually sent the message*/
 .alert {
   display: none; }
 
+/*Contact: This is for keeping the x-scroll bar hidden*/
 .textarea {
   overflow: hidden; }
 
+/*Main Footer: This is for the main footer. Specifically the color of the links in the footer*/
 #main-footer > a {
   color: #fff;
   text-decoration: none; }
 
 #main-footer > a:hover {
-  color: #FC4C65;
+  color: #fc4c65;
   text-decoration: none; }
